creating function to select with filter in IdeaRepo

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Ideas!{% endblock %}</title>
+
+    <link rel="stylesheet" href="{{  asset("css/app.css") }}">
 </head>
 <body>
 <div class="container">
-    <header><h1></h1></header>
+    <header>
+        <h1>Ideas</h1>
+        {% include('inc/nav.html.twig') %}
+    </header>
     <main>{% block main %}{% endblock %}</main>
     <footer>
         &copy; {{ "now"|date("Y") }} Ideas
+        {% include('inc/nav.html.twig') %}
     </footer>
 </div>
 </body>
