--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Ideas!{% endblock %}</title>
 
-    <link rel="stylesheet" href="{{  asset("css/app.css") }}">
+    <link rel="stylesheet" href="{{  asset("css/app4.css") }}">
 </head>
 <body>
 <div class="container">
