--- a/templates/inc/nav.html.twig
+++ b/templates/inc/nav.html.twig
@@ -3,5 +3,6 @@
         <li><a href="{{ path('home') }}">Home</a></li>
         <li><a href="{{ path('test') }}">Test page</a></li>
         <li><a href="{{ path('contact') }}">Contact us</a></li>
+        <li><a href="{{ path('list') }}">List of Ideas</a></li>
     </ul>
 </nav>
