--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -6,12 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Ideas!{% endblock %}</title>
 
-    <link rel="stylesheet" href="{{  asset("css/app4.css") }}">
+    <link rel="stylesheet" href="{{  asset("css/app.css") }}">
 </head>
 <body>
 <div class="container">
     <header>
         <h1>Ideas</h1>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="flash flash-{{ label }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+
         {% include('inc/nav.html.twig') %}
     </header>
     <main>{% block main %}{% endblock %}</main>
