modif Category Entity and db

--- a/templates/idea/list.html.twig
+++ b/templates/idea/list.html.twig
@@ -3,7 +3,9 @@
     <h2>Our ideas:</h2>
     {% for idea in ideas %}
         <div>
-            <a href="{{ path('detail', {'id' : idea.id }) }}"> {{ idea.getTitle }}</a>
+            <a href="{{ path('detail', {'id' : idea.id }) }}"> {{ idea.getTitle }} ({{ idea.categories | length }}
+                categories)</a>
+
         </div>
     {% endfor %}
 {% endblock %}
