--- a/templates/idea/detail.html.twig
+++ b/templates/idea/detail.html.twig
@@ -4,7 +4,16 @@
     <h2>{{ idea.getTitle }}</h2>
     <div>{{ idea.getDescription }}</div>
     <div>{{ idea.getAuthor }}</div>
-    <div>{{ idea.getDateCreated|date("m/d/Y") }}</div>
+    <div>{{ idea.getDateCreated|date("d/m/Y") }}</div>
+
+    <div>
+        {% for category in idea.categories %}
+            <div class="category">
+               <h3>{{ category.getCategories }}</h3>
+
+            </div>
+        {% endfor %}
+    </div>
 
 {% endblock %}
 
