adding new Route with method to find ideas by user

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,8 +1,9 @@
 {% extends 'layout.html.twig' %}
 
 {% block main %}
-    <h1> Home Page</h1>
-    <p>This website is a bucket-list.</p>
+    <h1>Bucket lists</h1>
+    <h2>Track and achieve your ideas, wishes or even your life goals</h2>
+    <p>Make a <strong>bucket list</strong> and discover what other members which to achieve.</p>
 {% endblock %}
 
 {% block title %}Ideas | Homepage{% endblock %}
