--- a/templates/idea/detail.html.twig
+++ b/templates/idea/detail.html.twig
@@ -3,9 +3,10 @@
 {% block main %}
     <h2>{{ idea.getTitle }}</h2>
     <div class="description">{{ idea.getDescription }}</div>
-    <div>from: {{ idea.getAuthor }}</div>
-    <div>added: {{ idea.getDateCreated|date("d/m/Y") }}</div>
     <div>category: {{ idea.category.getName()}}</div>
+    <div>from user: {{ idea.getAuthor }}</div>
+    <div>added: {{ idea.getDateCreated|date("d/m/Y") }}</div>
+    
 
 
 {% endblock %}
