--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -7,6 +7,7 @@
     <title>{% block title %}Ideas!{% endblock %}</title>
 
     <link rel="stylesheet" href="{{  asset("css/app.css") }}">
+    <link href="http://fonts.cdnfonts.com/css/betty-noir" rel="stylesheet">
 </head>
 <body>
 <div class="container">
