--- a/templates/idea/list.html.twig
+++ b/templates/idea/list.html.twig
@@ -1,12 +1,14 @@
 {% extends 'layout.html.twig' %}
 {% block main %}
-    <h2>Published ideas</h2>
+    <h2 class="project__heading">Published ideas</h2>
     {% for idea in ideas %}
         <div>
             <a href="{{ path('detail', {'id': idea.id}) }}" title="More details on {{ idea.title }}">
                 <h5>{{ idea.title }}</h5>
             </a>
+            <div class="project__tags">
             In category: {{ idea.category.name }}
+            </div>
         </div>
     {% endfor %}
 {% endblock %}
