--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -6,13 +6,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Ideas!{% endblock %}</title>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="{{  asset("css/app.css") }}">
-    <link href="http://fonts.cdnfonts.com/css/betty-noir" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+ 
 </head>
 <body>
 <div class="container">
-    <header>
-        <h1>Ideas</h1>
+    <header class="blog-header py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+        <div class="col-4 text-center">
+        <h1 class="blog-header-logo text-dark">Ideas</h1>
         {% for label, messages in app.flashes %}
             {% for message in messages %}
                 <div class="flash flash-{{ label }}">
@@ -20,13 +42,13 @@
                 </div>
             {% endfor %}
         {% endfor %}
-
-        {% include('inc/nav.html.twig') %}
+    </div>
     </header>
-    <main>{% block main %}{% endblock %}</main>
+    {% include('inc/nav.html.twig') %}
+    
+    <main class="container">{% block main %}{% endblock %}</main>
     <footer>
         &copy; {{ "now"|date("Y") }} Ideas
-        {% include('inc/nav.html.twig') %}
     </footer>
 </div>
 </body>
