--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,9 +1,45 @@
 {% extends 'layout.html.twig' %}
 
 {% block main %}
-    <h1>Bucket lists</h1>
-    <h2>Track and achieve your ideas, wishes or even your life goals</h2>
-    <p>Make a <strong>bucket list</strong> and discover what other members which to achieve.</p>
+<div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+<div class="col-md-6 px-0">
+    <h1 class="display-4 fst-italic">Bucket lists</h1>
+    <p class="lead my-3">Track and achieve your ideas, wishes or even your life goals. Make a <strong>bucket list</strong> and discover what other members whish to achieve.</p>
+    <p class="lead mb-0"><a href="{{ path('add') }}" class="text-white fw-bold">Add your first own idea...</a></p>
+    </div>
+    </div>
+
+    <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-primary">Latest Idea</strong>
+          <h3 class="mb-0">test</h3>
+          <div class="mb-1 text-muted">Nov 12</div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-success">Design</strong>
+          <h3 class="mb-0">Post title</h3>
+          <div class="mb-1 text-muted">Nov 11</div>
+          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block title %}Ideas | Homepage{% endblock %}
