--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -14,7 +14,9 @@
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-primary">Latest Idea</strong>
-          <h3 class="mb-0">test</h3>
+          {% for id in idea %}
+          <h3 class="mb-0">{{ id.title }}</h3>
+          {% endfor %}
           <div class="mb-1 text-muted">Nov 12</div>
           <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
           <a href="#" class="stretched-link">Continue reading</a>
