--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -27,7 +27,11 @@
         }
       }
     </style>
- 
+ <!-- Custom styles for this template -->
+    <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="blog.css" rel="stylesheet">
+
 </head>
 <body>
 <div class="container">
@@ -44,8 +48,9 @@
         {% endfor %}
     </div>
     </header>
+    <div class="nav-scroller py-1 mb-2">
     {% include('inc/nav.html.twig') %}
-    
+    </div>
     <main class="container">{% block main %}{% endblock %}</main>
     <footer>
         &copy; {{ "now"|date("Y") }} Ideas
