--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -1,19 +1,19 @@
 {% extends 'layout.html.twig' %}
 
 {% block main %}
-    <form class="form" method="post">
-        <div class="form__field">
-            <label for="username">Username:</label>
-            <input type="text" name="_username" id="username">
-        </div>
+<form method="post">
+    <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" class="form-control" name="_username" id="username" placeholder="your username as you chose it">
+    </div>
 
-        <div class="form__field">
-            <label for="password">Password:</label>
-            <input type="password" name="_password" id="password">
-        </div>
+    <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" class="form-control" name="_password" id="password" placeholder="Password">
+    </div>
 
-        <button class="btn btn--full-width" type="submit">login</button>
-    </form>
+    <button type="submit" class="btn btn-primary" type="submit">login</button>
+</form>
 
 {% endblock %}
 
