--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -1,10 +1,15 @@
 {% extends 'layout.html.twig' %}
 
 {% block main %}
-    {{ form_start(registerForm) }}
-    {{ form_widget(registerForm) }}
-    <button type="submit">Register</button>
-    {{ form_end(registerForm) }}
+
+<form>    
+    <div class="form-group">       
+        {{ form_start(registerForm) }}
+        {{ form_widget(registerForm) }}
+        <button class="btn btn-primary" type="submit">Register</button>
+    </div>
+</form>
+
 {% endblock %}
 
 {% block title %}Registration{% endblock %}
